--- a/data/maps/map003.mkd
+++ b/data/maps/map003.mkd
@@ -1423,6 +1423,7 @@
                 0,
                 ":pathfind",
                 {
+                  ":player": true,
                   ":x": 8,
                   ":y": 8
                 }
