--- a/data/order.mkd
+++ b/data/order.mkd
@@ -81,6 +81,8 @@ battle/ai.rb: AI
 battle_ui/constants.rb: Constants
 battle_ui/transition.rb: Transition
 battle_ui/ui.rb: UI
+battle_ui/ball_sprite.rb: Ball Sprite
+battle_ui/ball_open_animation.rb: Ball Open Animation
 battle_ui/battle_base.rb: Battle Base
 battle_ui/battler_sprite.rb: Battler Sprite
 battle_ui/trainer_sprite.rb: Trainer Sprite
