Implemented battle turn order

--- a/data/order.mkd
+++ b/data/order.mkd
@@ -79,7 +79,8 @@ battle/side.rb: Side
 battle/trainer.rb: Trainer
 battle/battler.rb: Battler
 battle/ai.rb: AI
-battle/choice: Choice
+battle/choice.rb: Choice
+battle/command.rb: Command
 battle_ui/constants.rb: Constants
 battle_ui/transition.rb: Transition
 battle_ui/ui.rb: UI
