Implemented stat stages

--- a/data/order.mkd
+++ b/data/order.mkd
@@ -94,6 +94,7 @@ battle_ui/battler_sprite.rb: Battler Sprite
 battle_ui/trainer_sprite.rb: Trainer Sprite
 battle_ui/databox.rb: Databox
 battle_ui/base_move_animation.rb: base Move Animation
+battle_ui/stat_sprite.rb: Stat Sprite
 routines/give_item_routine.rb: GiveItem Routine
 temp.rb: Temporary Data
 main.rb: Main
