--- a/data/order.mkd
+++ b/data/order.mkd
@@ -95,6 +95,7 @@ battle_ui/trainer_sprite.rb: Trainer Sprite
 battle_ui/databox.rb: Databox
 battle_ui/base_move_animation.rb: base Move Animation
 battle_ui/stat_sprite.rb: Stat Sprite
+battle_ui/level_up_window.rb: Level Up Window
 routines/give_item_routine.rb: GiveItem Routine
 temp.rb: Temporary Data
 main.rb: Main
