--- a/data/order.mkd
+++ b/data/order.mkd
@@ -84,6 +84,7 @@ battle/choice.rb: Choice
 battle/command.rb: Command
 battle/base_move.rb: Base Move
 battle/moves.rb: Moves
+battle/projections.rb: Projections
 battle_ui/constants.rb: Constants
 battle_ui/transition.rb: Transition
 battle_ui/ui.rb: UI
