Latest map changes

--- a/data/species.mkd
+++ b/data/species.mkd
@@ -1,1 +1,1 @@
-{":type":":species",":data":{":BULBASAUR":{"^c":"Species","@id":1,"@stats":{"^c":"Stats","@hp":45,"@attack":49,"@defense":49,"@spatk":65,"@spdef":65,"@speed":45},"@ev_yield":{"^c":"Stats","@hp":0,"@attack":0,"@defense":0,"@spatk":1,"@spdef":0,"@speed":0},"@moveset":{"^c":"Species::Moveset","@level":{"1":":TACKLE","4":":GROWL","7":":LEECHSEED","10":":VINEWHIP","15":[":POISONPOWDER",":SLEEPPOWDER"],"20":":RAZORLEAF","25":":SWEETSCENT","32":":GROWTH","39":":SYNTHESIS","46":":SOLARBEAM"},"@tms":[":TOXIC",":BULLETSEED",":HIDDENPOWER",":SUNNYDAY",":PROTECT",":GIGADRAIN",":FRUSTRATION",":SOLARBEAM",":RETURN",":DOUBLETEAM",":SLUDGEBOMB",":FACADE",":SECRETPOWER",":REST",":ATTRACT",":CUT",":STRENGTH",":FLASH",":ROCKSMASH"],"@tutor":[":BODYSLAM",":DOUBLEEDGE",":MIMIC",":SUBSTITUTE",":SWORDSDANCE",":SOLARBEAM"],"@evolution":[],"@egg":[":CHARM",":CURSE",":GRASSWHISTLE",":LIGHTSCREEN",":MAGICALLEAF",":PETALDANCE",":SAFEFUARD",":SKULLBASH"]},"@forms":{"1":{":name":"Boolbasaurus",":type1":":FIGHTING",":type2":":FLYING",":leveling_rate":":SLOW"}},"@battler_front_x":0,"@battler_front_y":0,"@battler_back_x":0,"@battler_back_y":30,"@intname":":BULBASAUR","@name":"BULBASAUR","@type1":":GRASS","@type2":":POISON","@abilities":[":OVERGROW"],"@hidden_ability":":CHLOROPHYLL","@egg_groups":[":MONSTER",":GRASS"],"@height":0.7,"@weight":6.9,"@base_exp":64,"@leveling_rate":":MEDIUMSLOW","@gender_ratio":":FEMALEONEEIGHTH","@catch_rate":45,"@hatch_cycles":20,"@pokedex_color":":GREEN","@pokedex_entry":"There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger.","@happiness":70,"@evolutions":[{":mode":":LEVEL",":species":":IVYSAUR",":argument":16}]}}}
+{":type":":species",":data":{":BULBASAUR":{"^c":"Species","@id":1,"@stats":{"^c":"Stats","@hp":45,"@attack":49,"@defense":49,"@spatk":65,"@spdef":65,"@speed":45},"@ev_yield":{"^c":"Stats","@hp":0,"@attack":0,"@defense":0,"@spatk":1,"@spdef":0,"@speed":0},"@moveset":{"^c":"Species::Moveset","@level":{"1":":TACKLE","4":":GROWL","7":":LEECHSEED","10":":VINEWHIP","15":[":POISONPOWDER",":SLEEPPOWDER"],"20":":RAZORLEAF","25":":SWEETSCENT","32":":GROWTH","39":":SYNTHESIS","46":":SOLARBEAM"},"@tms":[":TOXIC",":BULLETSEED",":HIDDENPOWER",":SUNNYDAY",":PROTECT",":GIGADRAIN",":FRUSTRATION",":SOLARBEAM",":RETURN",":DOUBLETEAM",":SLUDGEBOMB",":FACADE",":SECRETPOWER",":REST",":ATTRACT",":CUT",":STRENGTH",":FLASH",":ROCKSMASH"],"@tutor":[":BODYSLAM",":DOUBLEEDGE",":MIMIC",":SUBSTITUTE",":SWORDSDANCE",":SOLARBEAM"],"@evolution":[],"@egg":[":CHARM",":CURSE",":GRASSWHISTLE",":LIGHTSCREEN",":MAGICALLEAF",":PETALDANCE",":SAFEFUARD",":SKULLBASH"]},"@forms":{"1":{":name":"Boolbasaurus",":type1":":FIGHTING",":type2":":FLYING",":leveling_rate":":SLOW"}},"@intname":":BULBASAUR","@name":"BULBASAUR","@type1":":GRASS","@type2":":POISON","@abilities":[":OVERGROW"],"@hidden_ability":":CHLOROPHYLL","@egg_groups":[":MONSTER",":GRASS"],"@height":0.7,"@weight":6.9,"@base_exp":64,"@leveling_rate":":MEDIUMSLOW","@gender_ratio":":FEMALEONEEIGHTH","@catch_rate":45,"@hatch_cycles":20,"@pokedex_color":":GREEN","@pokedex_entry":"There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger.","@happiness":70,"@evolutions":[{":mode":":LEVEL",":species":":IVYSAUR",":argument":16}]}}}
